# midterm-Samantha-Scarborough

./: README.md
src/question_1/: main.cpp  question1.h
src/question_2/: question2.cpp  question2.h
src/question_3/: main.cpp  question3.cpp  question3.h
src/question_4/: main.cpp  question4.h
test/question_test_1/: question_tests_1.cpp
test/question_test_2/: CMakeLists.txt  question_tests_2.cpp
test/question_test_3/: question_tests_3.cpp
test/question_test_4/: CMakeLists.txt  question_tests_4.cpp
